src/QAction.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQActionCtor_1(void * parent);
EXTERNC void * SCWQActionCtor_1(void * parent);
EXTERNC void QWQActiontext(void * retBuffer, void * obj);
EXTERNC void QWQActionsetToolTip(void * obj, char * tip);
EXTERNC void QWQActionsetCheckable(void * obj, int8_t  arg1);
EXTERNC void QWQActiontrigger(void * obj);
EXTERNC void QWQActionsetChecked(void * obj, int8_t  arg1);
EXTERNC void QWQActionsetEnabled(void * obj, int8_t  arg1);
EXTERNC void QWQActionsetDisabled(void * obj, int8_t  b);
EXTERNC void QWvalidateCB_QAction(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQActionDtor(void *);
EXTERNC void SCWQActionDtor(void *);